WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
81674
[Qt][WK2] Item cannot be selected from select list in touch webview
https://bugs.webkit.org/show_bug.cgi?id=81674
Summary
[Qt][WK2] Item cannot be selected from select list in touch webview
Dinu Jacob
Reported
2012-03-20 09:41:08 PDT
Cannot select an item a from a select list.
Attachments
Patch
(3.88 KB, patch)
2012-03-20 09:47 PDT
,
Dinu Jacob
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dinu Jacob
Comment 1
2012-03-20 09:43:42 PDT
Touch webview grabs focus in touc event handler as the itemSelector qml component is not handling the touch event. Need to set the flag to ignore touch event in qquickwebview when displaying the select list (the flag was set earler in
https://bugs.webkit.org/show_bug.cgi?id=79738
for the other dialogs that uses QtDialogRunner in qquickwebview)
Dinu Jacob
Comment 2
2012-03-20 09:47:28 PDT
Created
attachment 132840
[details]
Patch
WebKit Review Bot
Comment 3
2012-03-21 04:43:55 PDT
Comment on
attachment 132840
[details]
Patch Clearing flags on attachment: 132840 Committed
r111523
: <
http://trac.webkit.org/changeset/111523
>
WebKit Review Bot
Comment 4
2012-03-21 04:43:59 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug