[Qt][WK2] Item cannot be selected from select list in touch webview https://bugs.webkit.org/show_bug.cgi?id=81674

Patch by Dinu Jacob <dinu.jacob@nokia.com> on 2012-03-21
Reviewed by Simon Hausmann.

Activate flag to prevent QQuickWebView from accepting touch event when select
dialog is being displayed.

* UIProcess/API/qt/qquickwebview.cpp:
(QQuickWebViewPrivate::QQuickWebViewPrivate):
(QQuickWebViewPrivate::execDialogRunner):
(QQuickWebView::touchEvent):
* UIProcess/API/qt/qquickwebview_p_p.h:
(QQuickWebViewPrivate::setDialogActive):
(QQuickWebViewPrivate):
* UIProcess/qt/WebPopupMenuProxyQt.cpp:
(WebKit::WebPopupMenuProxyQt::showPopupMenu):
(WebKit::WebPopupMenuProxyQt::hidePopupMenu):

Canonical link: https://commits.webkit.org/99026@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111523 268f45cc-cd09-0410-ab3c-d52691b4dbfc