Source/WebKit2/UIProcess/qt/WebPopupMenuProxyQt.cpp
@@ -239,11 +239,13 @@ void WebPopupMenuProxyQt::showPopupMenu(const IntRect& rect, WebCore::TextDirect
         notifyValueChanged();
         return;
     }
+    QQuickWebViewPrivate::get(m_webView)->setDialogActive(true);
 }
 
 void WebPopupMenuProxyQt::hidePopupMenu()
 {
     m_itemSelector.clear();
+    QQuickWebViewPrivate::get(m_webView)->setDialogActive(false);
     m_context.clear();
     notifyValueChanged();
 }
